--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -27,33 +27,36 @@
 
     <div class="contenido">
         <h1 class="title">Noticias</h1>
+        
+        <div>
+            <ul class="menu">
+                <li>
+                    <a href="#" id="AntSig">Anterior</a>
+                </li>
+                <li>
+                    <a href="#slide1">1</a>
+                </li>
+                <li>
+                    <a href="#slide2">2</a>
+                </li>
+                <li>
+                    <a href="#slide3">3</a>
+                </li>
+                <li>
+                    <a href="#slide4">4</a>
+                </li>
+                <li>
+                    <a href="#slide5">5</a>
+                </li>
+                <li>
+                    <a href="#" id="AntSig">Siguiente</a>
+                </li>
+            </ul> 
+        </div>
+
         <div id="noticias-slider">
 
-            <div>
-                <ul class="menu">
-                    <li>
-                        <a href="#" id="AntSig">Anterior</a>
-                    </li>
-                    <li>
-                        <a href="#slide1">1</a>
-                    </li>
-                    <li>
-                        <a href="#slide2">2</a>
-                    </li>
-                    <li>
-                        <a href="#slide3">3</a>
-                    </li>
-                    <li>
-                        <a href="#slide4">4</a>
-                    </li>
-                    <li>
-                        <a href="#slide5">5</a>
-                    </li>
-                    <li>
-                        <a href="#" id="AntSig">Siguiente</a>
-                    </li>
-                </ul> 
-            </div><ul class="slider">
+            <ul class="slider">
                 <li id="slide1">
                     <h2>La Facultad de Ingeniería de la UBA</h2>
                     <hr>
