--- a/index.html
+++ b/index.html
@@ -29,64 +29,40 @@
         <div class="texto">
             <h2>Noticia del día: La Facultad de Ingeniería de la UBA</h2>
             <hr>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Fugit veritatis, commodi incidunt libero, aut officia
-                molestias esse consequatur veniam nobis dolore ipsum unde
-                sequi voluptatem! Ipsam illum voluptatem eveniet culpa.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Rem est non assumenda asperiores quos qui voluptatibus
-                quaerat autem quis, doloribus suscipit quisquam. Minus
-                soluta, optio ducimus vero alias qui similique!
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Corrupti, explicabo? Sint veritatis fuga illum, a, dolor
-                molestias officiis quibusdam repudiandae facilis
-                dignissimos magnam voluptas. Iure cum tenetur magnam maiores
-                sapiente. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Autem debitis temporibus laboriosam mollitia voluptatem
-                nulla porro asperiores doloribus nihil, eaque provident
-                corporis dolore nisi earum necessitatibus consectetur?
-                Voluptatum, blanditiis expedita! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Quidem blanditiis vitae suscipit
-                eaque animi nam architecto, mollitia ipsum illo vel iste iusto
-                voluptatibus distinctio at. Eaque perspiciatis ad delectus
-                repellat?Lorem ipsum dolor sit amet consectetur, adipisicing
-                elit. Corporis hic deleniti, id et distinctio qui dolore, ex
-                laudantium perferendis asperiores itaque magnam laboriosam neque
-                ratione! Delectus sint sit dolore excepturi
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-                animi velit aliquid alias explicabo, enim, reiciendis praesentium
-                error suscipit repellat officia voluptatibus voluptates quas hic
-                quo recusandae corrupti blanditiis evenie. Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Odit ipsam tempore vitae rem
-                porro commodi suscipit quas repudiandae adipisci, iste nesciunt
-                nulla obcaecati, harum odio non quisquam cupiditate qui
-            </p>
             <h3>Su historia</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi fuga quos
-                        in corrupti distinctio architecto, quidem deleniti impedit tempore
-                        voluptas praesentium eos consectetur, magni adipisci. Illum hic optio
-                        saepe consequuntur.</p>
+                    <p>El edificio de la actual Facultad de Ingeniería de la UBA no estuvo intencionado para
+                        esos fines desde el principio; diseñado por Arturo Prins, la actual sede de Las Heras
+                        estaba destinada para ser la sede central de la Facultad de Derecho de la Universidad
+                        de Buenos Aires.
+                        <br>
+                        En búsqueda de un Arquitecto o Ingeniero Civil capaz de llevar a cabo un proyecto de
+                        tal magnitud, el Gobierno de la Ciudad de Buenos Aires y las autoridades de la UBA
+                        decidieron llevar a cabo un concurso donde se presentarían ideas y posibles proyectos
+                        arquitectónicos. Arturo Prins fue ganador y presentó el poryecto "Luis XIV", de estilo
+                        academicista francés, pero por ordenanza de las autoridades se cambió el estilo para
+                        asimiliar a lo gótico de las Iglesias de ese entonces. De hecho, la Facultad de
+                        Ingeniería es el único edificio en todo CABA de estilo neogótico / gótico que
+                        no pretenece a una entidad religiosa.</p>
                     <h3>Su exterior</h3>
                     <div class="grid-container">
                         <img src="./assets/fiuba1.jpg" alt="foto de la fiuba">
                         <img src="./assets/fiuba2.jpg" alt="foto de la fiuba">
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem nisi
-                        magni aliquid unde! Dolor incidunt deleniti corrupti nemo autem ratione
-                        molestiae, odit commodi aut? Aperiam sint quasi odio iure recusandae.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius
-                        atione quos a suscipit quibusdam accusantium nesciunt voluptate mollitia
-                        temporibus tenetur reprehenderit consectetur voluptatum, molestiae ipsa
-                        cupiditate ea, modi non.</p>
-            <h3>Sus aulas</h3>
+                    <p>Como se mencionó anteriormente, la fachada del edificio tiene inspiración neogótica.
+                        Todavía conserva algunos de sus ventanales y remaches originales. En 2016 se
+                        presentó un proyecto de restauración y puesta en punto de la fachada y conservación
+                        de interiores.</p>
+                    <h3>Sus aulas</h3>
                     <div class="grid-container">
                         <img src="./assets/fiuba3.jpg" alt="foto de la fiuba">
                         <img src="./assets/fiuba4.jpg" alt="foto de la fiuba">
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis
-                        nam, officia, saepe facere nostrum eaque voluptatum ratione beatae culpa,
-                        consequatur possimus? Sed incidunt aspernatur laborum nulla culpa vitae
-                        itaque!
+                    <p>La Facultad es tan linda por fuera como por dentro. Se conservan en buen estado la
+                        mayotía de las puertas, ventanas y mobiliario original en las aulas. Estas tienen
+                        escenarios para el docente y pizarrones antiguos con sistemas de subida y bajada
+                        automática. Obviamente, el interior del edificio se encuentra modificado para
+                        ajustarse a ciertas comodidades y acomodarse a las necesidades de las personas
+                        que la habitúan.
                         <br>
                         <br>
                         <a href="index.html">Volver al Inicio</a>
@@ -98,49 +74,37 @@
         <div class="texto">
             <h2>Noticia del día de ayer: La casa de Montevideo al 37</h2>
             <hr>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Fugit veritatis, commodi incidunt libero, aut officia
-                molestias esse consequatur veniam nobis dolore ipsum unde
-                sequi voluptatem! Ipsam illum voluptatem eveniet culpa.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Rem est non assumenda asperiores quos qui voluptatibus
-                quaerat autem quis, doloribus suscipit quisquam. Minus
-                soluta, optio ducimus vero alias qui similique!
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Corrupti, explicabo? Sint veritatis fuga illum, a, dolor
-                molestias officiis quibusdam repudiandae facilis
-                dignissimos magnam voluptas. Iure cum tenetur magnam maiores
-                sapiente. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Autem debitis temporibus laboriosam mollitia voluptatem
-                nulla porro asperiores doloribus nihil, eaque provident
-                corporis dolore nisi earum necessitatibus consectetur?
-                Voluptatum, blanditiis expedita! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Quidem blanditiis vitae suscipit
-                eaque animi nam architecto, mollitia ipsum illo vel iste iusto
-                voluptatibus distinctio at. Eaque perspiciatis ad delectus
-                repellat?Lorem ipsum dolor sit amet consectetur, adipisicing
-                elit. Corporis hic deleniti, id et distinctio qui dolore, ex
-                laudantium perferendis asperiores itaque magnam laboriosam neque
-                ratione! Delectus sint sit dolore excepturi
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-                animi velit aliquid alias explicabo, enim, reiciendis praesentium
-                error suscipit repellat officia voluptatibus voluptates quas hic
-                quo recusandae corrupti blanditiis evenie. Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Odit ipsam tempore vitae rem
-                porro commodi suscipit quas repudiandae adipisci, iste nesciunt
-                nulla obcaecati, harum odio non quisquam cupiditate qui
+            <p>En medio de esa monotonía en la que se sumerge la ciudad, se alza rosa y
+                gigante La Belle Époque, el hotel petit con impronta art nouveau que
+                Tamara Pont se animó a crear en medio de la pandemia y que logró terminar
+                en solo nueves meses de obra. 
+                <br>
+                El edificio, catalogado como patrimonio histórico de la ciudad, se compone
+                por dos pisos y un subsuelo. Se trata de una construcción característica de
+                aquella Buenos Aires que se animaba a soñar con ser la París de Latinoamérica.
+                Al momento de realizar la compra, el terreno se vendía como lote. La primera
+                vez que Para Ti Deco visitó el lugar, en agosto de este año, todavía dejaba 
+                ver un poco de esa faceta de edificio tomado, con las paredes descascaradas,
+                escritas, manchadas.
             </p>
             <div class="grid-container">
                 <img src="./assets/antes.png" alt="casa montevideo">
                 <img src="./assets/depues.png" alt="casa montevideo">
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem nisi
-                magni aliquid unde! Dolor incidunt deleniti corrupti nemo autem ratione
-                molestiae, odit commodi aut? Aperiam sint quasi odio iure recusandae.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius
-                atione quos a suscipit quibusdam accusantium nesciunt voluptate mollitia
-                temporibus tenetur reprehenderit consectetur voluptatum, molestiae ipsa
-                cupiditate ea, modi non.
+            <p>“Yo no llegué al lugar, el lugar llegó a mí. Estaba buscando otra cosa y
+                cuando lo ví dije 'lo voy a comprar'. La primera vez que entré me sentía en
+                un capítulo de Okupas: era un edificio habitado, muy difícil de transitar y
+                más aún con mi condición de salud. Tan es así que los primeros meses de obra
+                los tuve que dirigir con cámaras, porque no podía acceder a los pisos”, explica
+                Tamara desde uno de los balcones del hotel. Es un espacio intervenido en su
+                totalidad con un tono rosa casi blanco (al igual que toda la fachada) con una
+                rosa roja en un florero y pertenece a una de las habitaciones que se van a
+                alquilar por 200 dólares la noche. La Belle Époque no es solo un hotel, es
+                una experiencia que se adapta a cada pasajero, en la que utilizan fragancias
+                Dior y Hermès como ambientación.
+                <br>
+                <br>
+                Texto de ParaTi
                 <br>
                 <br>
                 <a href="index.html">Volver al Inicio</a></p>
