--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -61,7 +61,7 @@
                     <h2>La Facultad de Ingeniería de la UBA</h2>
                     <hr>
                     <h3>Su historia</h3>
-                    <p>El edificio de la actual Faculta de Ingeniería de la UBA no estuvo intencionado para
+                    <p>El edificio de la actual Facultad de Ingeniería de la UBA no estuvo intencionado para
                         esos fines desde el principio; diseñado por Arturo Prins, la actual sede de Las Heras
                         estaba destinada para ser la sede central de la Facultad de Derecho de la Universidad
                         de Buenos Aires.
